infra/k8s/mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
        - name: auth-db
          image: mysql:8.0.36-debian
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db-svc
spec:
  selector:
    app: auth-db
  type: ClusterIP
  ports:
    - name: db
      protocol: TCP
      port: 3306
      targetPort: 3306
