infra/k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticketing
      http:
        paths:
          - path: '/(.*)'
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port:
                  number: 3000
